--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
     "crypto": "^1.0.1",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-apple-authentication": "~7.1.3",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.3",
@@ -39,7 +39,7 @@
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
